--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,14 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Alovoa">
-<meta name="theme-color" content="#3298DC"/>
+<meta name="theme-color" content="#3298DC" />
 <link rel="manifest" href="/manifest.json">
 <link rel="apple-touch-icon" href="/img/android-chrome-192x192.png">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/index.css" />
-<title>Alovoa</title>
+<title th:text="#{app.name}"></title>
 </head>
 
 <body>
@@ -21,21 +21,15 @@
 		<header th:replace="fragments.html::header"></header>
 
 		<div class="box" id="cookie-banner">
-			<div class="has-text-centered">
-				This site uses cookies to store the session and user preferences to
-				function properly. Your data is safe with us, as we don't store any
-				personal information in the cookies nor do we send any information
-				to a third party. By continuing to use this site you agree to the
-				use of cookies. <a href="/privacy#cookies">Click here to learn more</a>
-
+			<div class="has-text-centered" th:text="#{index.cookie.notice}">
+				<a href="/privacy#cookies" th:text="#{index.cookie.more}"></a>
 			</div>
 		</div>
 		<section class="hero is-info is-medium is-bold">
 			<div class="hero-body">
 				<div class="container has-text-centered">
-					<h1 class="title is-size-1">Alovoa</h1>
-					<h2 class="subtitle is-size-4">The platform that is
-						specifically built for meeting new people and forming relationships</h2>
+					<h1 class="title is-size-1" th:text="#{app.name}"></h1>
+					<h2 class="subtitle is-size-4" th:text="#{index.subtitle}"></h2>
 				</div>
 			</div>
 		</section>
@@ -53,13 +47,10 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4>Forever free</h4>
-								<p>This platform does not require you to pay any kind of
-									fee, you are free to use all features without limitations. We
-									solely rely on your generous donations to keep this platform
-									running.</p>
+								<h4 th:text="#{index.free.title}"></h4>
+								<p th:text="#{index.free.description}"></p>
 								<p>
-									<a href="/donate-list">Donate</a>
+									<a href="/donate-list" th:text="#{donate}"></a>
 								</p>
 							</div>
 						</div>
@@ -72,13 +63,11 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4>Open-source</h4>
-								<p>We believe in transparency, not obfuscation. Every line
-									of code and every used library is free and open-source,
-									allowing everyone to view and improve on the platform if they
-									so desire.</p>
+								<h4 th:text="#{index.free.title}"></h4>
+								<p th:text="#{index.free.description}"></p>
 								<p>
-									<a href="https://github.com/Alovoa/alovoa">Source code</a>
+									<a href="https://github.com/Alovoa/alovoa"
+										th:text="#{source-code}"></a>
 								</p>
 							</div>
 						</div>
@@ -91,13 +80,10 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4>Private and secure</h4>
-								<p>We do not sell any of your information to anyone, that's
-									a promise we will always keep. Additionally, your most
-									sensitive data is heavily encrypted and will be safe even if a
-									data breach were to occur.</p>
-								<p>
-									<a href="/privacy">Privacy policy</a>
+								<h4></h4>
+								<p th:text="#{index.private.title}"></p>
+								<p th:text="#{index.private.description}">
+									<a href="/privacy" th:text="#{privacy-policy}"></a>
 								</p>
 							</div>
 						</div>
@@ -114,11 +100,8 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4>Ad-free</h4>
-								<p>Ads slow down the browser, are intrusive, annoying and
-									can potentially inject malware to your device. That's why you
-									won't see any ads on this platform as believe that your
-									experience is more important than our profit.</p>
+								<h4 th:text="#{index.ad-free.title}"></h4>
+								<p th:text="#{index.ad-free.description}"></p>
 							</div>
 						</div>
 					</div>
@@ -130,13 +113,8 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4>Latest technologies</h4>
-								<p>
-									We use the latest technologies so that you can benefit from the
-									latest features the web can offer. For example, you can install
-									this platform as a <a
-										href="https://wikipedia.org/wiki/Progressive_web_application">progressive
-										web application</a> directly from your browser!
+								<h4 th:text="#{index.technology.title}"></h4>
+								<p th:text="#{index.technology.description}">
 								</p>
 							</div>
 						</div>
@@ -149,10 +127,8 @@
 						</div>
 						<div class="card-content">
 							<div class="content">
-								<h4>Built for you</h4>
-								<p>With advanced filters, we only show you the people that
-									meet your criteria. That way, you spend less time searching and
-									more time finding and meeting new people.</p>
+								<h4 th:text="#{index.for-you.title}"></h4>
+								<p ></p>
 							</div>
 						</div>
 					</div>
@@ -165,7 +141,7 @@
 				<div class="hero-body">
 
 					<div class="container has-text-centered">
-						<h1 class="title">Sign up now!</h1>
+						<h1 class="title" th:text="#{index.sign-up-now}"></h1>
 					</div>
 
 				</div>
