--- a/src/main/resources/templates/messageDetail.html
+++ b/src/main/resources/templates/messageDetail.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/messageDetail.css" />
-<title>Messages</title>
+<title th:text="#{message.title}"></title>
 </head>
 <body>
 	<div id="main-logged-in">
