--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<title>Login</title>
+<title th:text="#{password-change.title}"></title>
 </head>
 <body>
 	<div id="main">
@@ -18,7 +18,7 @@
 		<div class="section">
 			<div class="container">
 				<div class="column">
-					<h3 class="title">Change password</h3>
+					<h3 class="title" th:text="#{password-change.title}"></h3>
 					<form th:action="@{/password/change}" method="POST" id="form">
 						<div class="box">
 							<input id="token" type="hidden" th:value="${tokenString}">
@@ -36,16 +36,14 @@
 							</div>
 							<div class="field">
 								<div class="control">
-									<input class="input" type="password" id="password-repeat" placeholder="Repeat password"
-										required>
+									<input class="input" type="password" id="password-repeat"
+										placeholder="Repeat password" required>
 								</div>
 							</div>
-							<div class="notification is-danger" id="password-info">
-								Your password needs to be at least <span>7</span> characters
-								long and must contain characters and numbers.
-							</div>
+							<div class="notification is-danger" id="password-info"
+								th:text="#{password-change.warning}"></div>
 							<input id="tokenString" type="hidden">
-							<button class="button">Change password</button>
+							<button class="button" th:text="#{submit}"></button>
 
 						</div>
 					</form>
