--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<title>Reset password</title>
+<title th:text="#{password-reset.title}"></title>
 </head>
 <body>
 	<div id="main">
@@ -18,7 +18,7 @@
 		<div class="section">
 			<div class="container">
 				<div class="column">
-					<h3 class="title">Reset password</h3>
+					<h3 class="title" th:text="#{password-reset.title}"></h3>
 					<div class="box">
 						<form th:action="@{/password/reset}" method="POST" id="form">
 							<div class="field">
@@ -42,7 +42,7 @@
 										placeholder="Captcha" autocomplete="off" required>
 								</div>
 							</div>
-							<button class="button">Submit</button>
+							<button class="button" th:text="#{submit}"></button>
 						</form>
 					</div>
 				</div>
