--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<title>Delete account</title>
+<title th:text="#{delete-account.title}"></title>
 </head>
 <body>
 	<div id="main-logged-in">
@@ -19,7 +19,7 @@
 
 		<div class="section">
 			<div class="container">
-				<h3 class="title">Delete account</h3>
+				<h3 class="title" th:text="#{delete-account.title}"></h3>
 				<form th:action="@{/user/delete-account-confirm}" method="POST"
 					id="delete-account-form">
 					<input type="hidden" name="tokenString" th:value="${tokenString}"
@@ -45,10 +45,9 @@
 					</div>
 					<div class="field">
 						<input id="confirm" type="checkbox" name="confirm" class="switch"
-							style="position: absolute" required> <label for="confirm"><span>I
-								hereby confirm to delete this account permanently.</span> </label>
+							style="position: absolute" required> <label for="confirm"><span th:text="#{delete-account.confirm}"></span> </label>
 					</div>
-					<button class="button">Submit</button>
+					<button class="button" th:text="#{submit}"></button>
 				</form>
 			</div>
 		</div>
