--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-calendar.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<title>Register</title>
+<title th:text="#{register.title}"></title>
 </head>
 <body>
 	<div id="main">
@@ -21,33 +21,36 @@
 				<div class="column">
 					<form th:action="@{/register}" method="POST" id="register-form">
 						<div class="field">
-							<label class="label">First name<span class="asterisk">*</span></label>
+							<label class="label" th:text="#{first-name}"><span
+								class="asterisk">*</span></label>
 							<div class="control">
 								<input class="input" type="text" name="firstName" required>
 							</div>
 						</div>
 						<div class="field">
-							<label class="label">Email<span class="asterisk">*</span></label>
+							<label class="label" th:text="#{email}"><span
+								class="asterisk">*</span></label>
 							<div class="control">
 								<input class="input" type="email" name="email" required>
 							</div>
 						</div>
 						<div class="field">
-							<label class="label">Date of birth<span class="asterisk">*</span></label>
+							<label class="label" th:text="#{dob}"><span
+								class="asterisk">*</span></label>
 							<div class="control">
 								<input type="date" name="dateOfBirth" required>
 							</div>
 						</div>
 
 						<div class="field">
-							<label class="label">Password</label>
+							<label class="label" th:text="#{password}"></label>
 							<div class="control">
 								<input class="input" type="password" name="password"
 									id="password" required>
 							</div>
 						</div>
 						<div class="field">
-							<label class="label">Password repeat</label>
+							<label class="label" th:text="#{password-repeat}"></label>
 							<div class="control">
 								<input class="input" type="password" id="password-repeat"
 									required>
@@ -55,23 +58,25 @@
 						</div>
 
 						<div style="height: 2px"></div>
-						<div class="notification is-danger" id="password-info">
-							Your password needs to be at least <span>7</span> characters long
-							and must contain characters and numbers.
-						</div>
+						<div class="notification is-danger" id="password-info"
+							th:text="#{password-change.warning}"></div>
 
 						<div class="field">
-							<label class="label">Gender<span class="asterisk">*</span></label>
+							<label class="label" th:text="#{gender}"><span
+								class="asterisk">*</span></label>
 							<div class="select">
 								<select name="gender" required>
 									<option value=""></option>
 									<th:block th:each="gender : ${genders}">
 										<option th:value="${gender.id}"
-											th:if="${gender.text == 'male'}">Male</option>
+											th:if="${gender.text == 'male'}"
+											th:text="#{profile.gender.male}"></option>
 										<option th:value="${gender.id}"
-											th:if="${gender.text == 'female'}">Female</option>
+											th:if="${gender.text == 'female'}"
+											th:text="#{profile.gender.female}"></option>
 										<option th:value="${gender.id}"
-											th:if="${gender.text == 'other'}">Other</option>
+											th:if="${gender.text == 'other'}"
+											th:text="#{profile.gender.other}"></option>
 									</th:block>
 								</select>
 							</div>
@@ -91,8 +96,8 @@
 						</div> 
 						 -->
 						<div class="field">
-							<label class="label">Captcha</label> <input id="captcha-id"
-								name="captchaId" type="hidden">
+							<label class="label" th:text="#{captcha}"></label> <input
+								id="captcha-id" name="captchaId" type="hidden">
 
 							<div class="field">
 								<img id="captcha-image">
@@ -112,28 +117,26 @@
 						<div class="field">
 							<div class="field">
 								<input id="tos" type="checkbox" name="tos" class="switch"
-									style="position: absolute" required> <label for="tos">I
-									agree to the <a href="#">terms and conditions</a>
-								</label>
+									style="position: absolute" required> <label for="tos"
+									th:utext="#{register.tos-agree}"> </label>
 							</div>
 							<div class="field">
 								<input id="pp" type="checkbox" name="pp" class="switch"
-									style="position: absolute" required> <label for="pp">I
-									agree to the <a href="#">privacy policy</a>
-								</label>
+									style="position: absolute" required> <label for="pp"
+									th:utext="#{register.privacy-agree}"> </label>
 							</div>
 						</div>
 
-						<div class="register-warning">Fields with an asterisk (*)
-							cannot be changed in the future</div>
+						<div class="register-warning"
+							th:text="#{register.asterisk-warning}"></div>
 
 						<div class="field is-grouped">
 							<div class="control">
-								<button class="button is-link" type="submit">Submit</button>
+								<button class="button is-link" type="submit" th:text="#{submit}"></button>
 							</div>
 							<div class="control">
 								<button class="button is-link is-light" type="button"
-									onclick="window.location = '/'">Cancel</button>
+									onclick="window.location = '/'" th:text="#{cancel}"></button>
 							</div>
 						</div>
 					</form>
@@ -149,7 +152,7 @@
 	<script src="/js/lib/bulma-calendar.min.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
 	<script src="/js/tools/checkPassword.js"></script>
-	
+
 	<script src="/js/register.js"></script>
 
 
