--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -35,14 +35,15 @@
 							<div class="left" style="font-size: 2em"
 								th:text="${user.firstName}"></div>
 							<div class="right" style="font-size: 1.5em">
-								<span>Age: </span><span th:text="${user.age}"></span>
+								<span th:text="#{age}"></span><span>: </span><span
+									th:text="${user.age}"></span>
 							</div>
 						</div>
 					</div>
 					<div class="media">
 						<div class="full-width">
 							<div class="left" style="font-size: 1.2em">
-								<span>Last active: </span><span
+								<span th:text="#{last-active}"></span><span>: </span><span
 									th:text="${#dates.format(user.activeDate, 'yyyy-MM-dd')}"></span>
 							</div>
 						</div>
@@ -51,7 +52,7 @@
 
 
 				<div class="field">
-					<label class="label">Description</label>
+					<label class="label" th:text="#{description}"></label>
 					<textarea class="textarea" id="description"
 						th:text="${user.description}" readOnly></textarea>
 				</div>
@@ -59,29 +60,33 @@
 				<table class="table" style="width: 100%">
 					<tbody>
 						<tr>
-							<th>Gender</th>
-							<td th:if="${user.gender.text == 'male'}">Male</td>
-							<td th:if="${user.gender.text == 'female'}">Female</td>
-							<td th:if="${user.gender.text == 'other'}">Other</td>
+							<th th:text="#{gender}"></th>
+							<td th:if="${user.gender.text == 'male'}"
+								th:text="#{profile.gender.male}"></td>
+							<td th:if="${user.gender.text == 'female'}"
+								th:text="#{profile.gender.female}"></td>
+							<td th:if="${user.gender.text == 'other'}"
+								th:text="#{profile.gender.other}"></td>
 						</tr>
 						<tr>
-							<th>Intention</th>
-							<td th:if="${user.intention.text == 'meet'}">Meeting new
-								people</td>
-							<td th:if="${user.intention.text == 'date'}">Romantic
-								relationship</td>
-							<td th:if="${user.intention.text == 'sex'}">Sexual intimacy</td>
+							<th th:text="#{profile.intention}"></th>
+							<td th:if="${user.intention.text == 'meet'}"
+								th:text="#{profile.intention.meet}"></td>
+							<td th:if="${user.intention.text == 'date'}"
+								th:text="#{profile.intention.date}"></td>
+							<td th:if="${user.intention.text == 'sex'}"
+								th:text="#{profile.intention.sex}"></td>
 						</tr>
 						<tr>
-							<th>Donated</th>
+							<th th:text="#{donated}"></th>
 							<td th:text="${user.totalDonations} + ' €'"></td>
 						</tr>
 						<tr>
-							<th># Blocks by users</th>
+							<th th:text="#{userprofile.num-blocks}"></th>
 							<td th:text="${#lists.size(user.blockedByUsers)}"></td>
 						</tr>
 						<tr>
-							<th># Reports by users</th>
+							<th th:text="#{userprofile.num-reports}"></th>
 							<td th:text="${#lists.size(user.reportedByUsers)}"></td>
 						</tr>
 					</tbody>
@@ -140,8 +145,8 @@
 			<div class="modal-background" onclick="closeModal()"></div>
 			<div class="modal-content">
 				<div class="box">
-					<div style="margin-bottom: 24px">Report user for violating
-						the ToS? Examples: NSFW profile picture or impersonation.</div>
+					<div style="margin-bottom: 24px"
+						th:utext="#{userprofile.report.confirm}"></div>
 
 					<div class="field">
 						<input id="captcha-id" name="captchaId" type="hidden"> <input
@@ -160,7 +165,8 @@
 						</div>
 						<div class="field" style="height: 42px">
 							<button class="button is-info" style="float: right"
-								th:onclick="reportUserSubmit([[${user.idEncoded}]])">Submit</button>
+								th:onclick="reportUserSubmit([[${user.idEncoded}]])"
+								th:text="#{submit}"></button>
 						</div>
 					</div>
 				</div>
