Added translation for text in js files

--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -40,7 +40,8 @@
 
 	</div>
 	<footer th:replace="fragments.html::footer"></footer>
-
+	
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 </body>
