--- a/src/main/resources/templates/messageDetail.html
+++ b/src/main/resources/templates/messageDetail.html
@@ -49,6 +49,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/messageDetail.js"></script>
 </body>
 </html>
