--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -155,6 +155,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/notification.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/profile.js"></script>
 </body>
 </html>
