--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -152,7 +152,7 @@
 	<script src="/js/lib/bulma-calendar.min.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
 	<script src="/js/tools/checkPassword.js"></script>
-
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/register.js"></script>
 
 
