--- a/src/main/resources/templates/delete-account.html
+++ b/src/main/resources/templates/delete-account.html
@@ -59,6 +59,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/delete-account.js"></script>
 </body>
 </html>
