--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -153,6 +153,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/sw.js"></script>
 	<script src="/js/index.js"></script>
 </body>
