--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -73,6 +73,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/login.js"></script>
 </body>
 </html>
