--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -56,6 +56,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/message.js"></script>
 </body>
 </html>
