--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -48,6 +48,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 </html>
