--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -56,6 +56,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/checkPassword.js"></script>
+	<script src="/js/tools/getText.js"></script>
 	<script src="/js/password-change.js"></script>
 </body>
 </html>
